# CloudVigilant

./: CMakeLists.txt  CloudVigilante_Diagram.drawio  DbPlan.md  Main.cpp  Makefile  Planning.md  README.md  certs.md  cloud_vigilant  cloud_vigilante  nginxConfig.md  notes.md  push.sh
certs/: cert.pem  key.pem
libs/: DeviceInfo.cpp  ProcessLister.cpp  ProcessLister.h
libs/HttpService/: HttpService.cpp  HttpService.h
libs/Monitoring/: DeviceInfo.cpp  DeviceInfo.h  ProcessLister.cpp  ProcessLister.h  SystemUsage.cpp  SystemUsage.h
scripts/: onboarding.py
tests/: httpTester.py
